--- a/main.tex
+++ b/main.tex
@@ -91,6 +91,7 @@
   }
 }
 
+\newtheorem{definition}{Definition}[chapter]
 \newtcbtheorem[auto counter, number within=chapter]{defbox}{Definition}{
   float=h!,
   colframe=black!20!white,
