--- a/inductive.tex
+++ b/inductive.tex
@@ -140,6 +140,7 @@ In this chapter, we will introduce the basic concepts of this theory and discuss
 properties of the main \gls{ml} methods.
 
 \section{The learning problem}
+\label{sec:learning-problem}
 
 Consider the set
 \begin{equation}
