--- a/preprocess.tex
+++ b/preprocess.tex
@@ -111,6 +111,7 @@ to avoid \gls{leakage} and to guarantee that the model will behave as expected i
 production.
 
 \subsection{Formal definition}
+\label{sub:formal-preprocessing}
 
 Let $T = (K, H, c)$ be a table that represents the data in the desired observational unit
 --- as defined in \cref{sec:formal-structured-data}.  In this chapter, without loss of
