--- a/references.bib
+++ b/references.bib
@@ -648,3 +648,15 @@ author = {Freek Stulp and Olivier Sigaud},
     issn = {0899-7667},
     doi = {10.1162/neco_a_01362},
 }
+
+@article{Tofallis2015,
+  author = {Chris Tofallis},
+  title = {A better measure of relative prediction accuracy for model selection and model estimation},
+  journal = {Journal of the Operational Research Society},
+  volume = {66},
+  number = {8},
+  pages = {1352--1362},
+  year = {2015},
+  publisher = {Taylor \& Francis},
+  doi = {10.1057/jors.2014.103}
+}
